poke/testsuite/poke.pkl/units-diag-3.pk
/* { dg-do compile } */

defvar n = 10;
defunit x = 2 + n; /* { dg-error "constant" } */
